[project]
name = "llm-rag-sample"
version = "0.1.0"
description = "llm rag samples"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dspy-ai>=2.5.0",
    "haystack-ai>=2.5.1",
    "langgraph>=0.2.28",
    "ollama-haystack>=1.0.1",
    "ragas-haystack>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]

